--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/grayfmrcl/do-it-api#readme",
   "dependencies": {
     "express": "^4.16.3",
-    "mongoose": "^5.2.7"
+    "mongoose": "^5.2.7",
+    "morgan": "^1.9.0"
   }
 }
