--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "express": "^4.16.3",
     "mongoose": "^5.2.7",
+    "mongoose-unique-validator": "^2.0.1",
     "morgan": "^1.9.0"
   }
 }
