--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.7",
     "mongoose-unique-validator": "^2.0.1",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.5"
   }
 }
