--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.7",
-    "mongoose-unique-validator": "^2.0.1",
     "morgan": "^1.9.0",
-    "request": "^2.88.0",
-    "request-promise-native": "^1.0.5"
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
+    "passport-google-oauth": "^1.0.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0"
   }
 }
